--- a/pom.xml
+++ b/pom.xml
@@ -80,4 +80,13 @@
       </plugin>
     </plugins>
   </build>
+  
+  <repositories>
+  	<repository>
+	    <id>prime-repo</id>
+	    <name>PrimeFaces Maven Repository</name>
+	    <url>http://repository.primefaces.org</url>
+	    <layout>default</layout>
+	</repository>
+  </repositories>
 </project>
